@@ -1,7 +1,7 @@
 
 /* png.h - header file for PNG reference library
  *
- * libpng version 1.6.22beta01, January 16, 2016
+ * libpng version 1.6.22beta01, January 18, 2016
  *
  * Copyright (c) 1998-2002,2004,2006-2016 Glenn Randers-Pehrson
  * (Version 0.96 Copyright (c) 1996, 1997 Andreas Dilger)
@@ -12,7 +12,7 @@
  * Authors and maintainers:
  *   libpng versions 0.71, May 1995, through 0.88, January 1996: Guy Schalnat
  *   libpng versions 0.89, June 1996, through 0.96, May 1997: Andreas Dilger
- *   libpng versions 0.97, January 1998, through 1.6.22beta01, January 16, 2016:
+ *   libpng versions 0.97, January 1998, through 1.6.22beta01, January 18, 2016:
  *     Glenn Randers-Pehrson.
  *   See also "Contributing Authors", below.
  */
@@ -25,7 +25,7 @@
  *
  * This code is released under the libpng license.
  *
- * libpng versions 1.0.7, July 1, 2000, through 1.6.22beta01, January 16, 2016, are
+ * libpng versions 1.0.7, July 1, 2000, through 1.6.22beta01, January 18, 2016, are
  * Copyright (c) 2000-2002, 2004, 2006-2016 Glenn Randers-Pehrson, are
  * derived from libpng-1.0.6, and are distributed according to the same
  * disclaimer and license as libpng-1.0.6 with the following individuals
@@ -214,7 +214,7 @@
  * Y2K compliance in libpng:
  * =========================
  *
- *    January 16, 2016
+ *    January 18, 2016
  *
  *    Since the PNG Development group is an ad-hoc body, we can't make
  *    an official declaration.
@@ -284,7 +284,7 @@
 /* Version information for png.h - this should match the version in png.c */
 #define PNG_LIBPNG_VER_STRING "1.6.22beta01"
 #define PNG_HEADER_VERSION_STRING \
-     " libpng version 1.6.22beta01 - January 16, 2016\n"
+     " libpng version 1.6.22beta01 - January 18, 2016\n"
 
 #define PNG_LIBPNG_VER_SONUM   16
 #define PNG_LIBPNG_VER_DLLNUM  16
@@ -3085,7 +3085,7 @@ PNG_EXPORT(240, int, png_image_write_to_stdio, (png_imagep image, FILE *file,
  * channels.
  *
  * Note that the write API does not support interlacing, sub-8-bit pixels or
- * st ancillary chunks.  If you need to write text chunks (e.g. for copyright
+ * most ancillary chunks.  If you need to write text chunks (e.g. for copyright
  * notices) you need to use one of the other APIs.
  */
 
@@ -3121,7 +3121,7 @@ PNG_EXPORT(245, int, png_image_write_to_memory, (png_imagep image, void *memory,
    /* Return the amount of memory in 'size' required to compress this image.
     * The png_image structure 'image' must be filled in as in the above
     * function and must not be changed before the actual write call, the buffer
-    * and all other parameters must also be indentical to that in the final
+    * and all other parameters must also be identical to that in the final
     * write call.  The 'size' variable need not be initialized.
     *
     * NOTE: the macro returns true/false, if false is returned 'size' will be
@@ -3147,7 +3147,7 @@ PNG_EXPORT(245, int, png_image_write_to_memory, (png_imagep image, void *memory,
 #  define PNG_ZLIB_MAX_SIZE(b) ((b)+(((b)+7U)>>3)+(((b)+63U)>>6)+11U)
    /* An upper bound on the number of compressed bytes given 'b' uncompressed
     * bytes.  This is based on deflateBounds() in zlib; different
-    * implementations of zlib compression may conceivable produce more data so
+    * implementations of zlib compression may conceivably produce more data so
     * if your zlib implementation is not zlib itself redefine this macro
     * appropriately.
     */
